@@ -2624,79 +2624,79 @@ VIAInitialize3DEngine(ScrnInfoPtr pScrn)
     VIAPtr  pVia = VIAPTR(pScrn);
     int i;
 
-    VIASETREG(0x43C, 0x00010000);
+    VIASETREG(VIA_REG_TRANSET, 0x00010000);
 
     for (i = 0; i <= 0x7D; i++)
       {
-	VIASETREG(0x440, (CARD32) i << 24);
+	VIASETREG(VIA_REG_TRANSPACE, (CARD32) i << 24);
       }
 
-    VIASETREG(0x43C, 0x00020000);
+    VIASETREG(VIA_REG_TRANSET, 0x00020000);
 
     for (i = 0; i <= 0x94; i++)
       {
-	VIASETREG(0x440, (CARD32) i << 24);
+	VIASETREG(VIA_REG_TRANSPACE, (CARD32) i << 24);
       }
 
-    VIASETREG(0x440, 0x82400000);
+    VIASETREG(VIA_REG_TRANSPACE, 0x82400000);
 
-    VIASETREG(0x43C, 0x01020000);
+    VIASETREG(VIA_REG_TRANSET, 0x01020000);
 
 
     for (i = 0; i <= 0x94; i++)
       {
-	VIASETREG(0x440, (CARD32) i << 24);
+	VIASETREG(VIA_REG_TRANSPACE, (CARD32) i << 24);
       }
 
-    VIASETREG(0x440, 0x82400000);
-    VIASETREG(0x43C, 0xfe020000);
+    VIASETREG(VIA_REG_TRANSPACE, 0x82400000);
+    VIASETREG(VIA_REG_TRANSET, 0xfe020000);
 
     for (i = 0; i <= 0x03; i++)
       {
-	VIASETREG(0x440, (CARD32) i << 24);
+	VIASETREG(VIA_REG_TRANSPACE, (CARD32) i << 24);
       }
 
-    VIASETREG(0x43C, 0x00030000);
+    VIASETREG(VIA_REG_TRANSET, 0x00030000);
 
     for (i = 0; i <= 0xff; i++)
       {
-	VIASETREG(0x440, 0);
+	VIASETREG(VIA_REG_TRANSPACE, 0);
       }
-    VIASETREG(0x43C, 0x00100000);
-    VIASETREG(0x440, 0x00333004);
-    VIASETREG(0x440, 0x10000002);
-    VIASETREG(0x440, 0x60000000);
-    VIASETREG(0x440, 0x61000000);
-    VIASETREG(0x440, 0x62000000);
-    VIASETREG(0x440, 0x63000000);
-    VIASETREG(0x440, 0x64000000);
+    VIASETREG(VIA_REG_TRANSET, 0x00100000);
+    VIASETREG(VIA_REG_TRANSPACE, 0x00333004);
+    VIASETREG(VIA_REG_TRANSPACE, 0x10000002);
+    VIASETREG(VIA_REG_TRANSPACE, 0x60000000);
+    VIASETREG(VIA_REG_TRANSPACE, 0x61000000);
+    VIASETREG(VIA_REG_TRANSPACE, 0x62000000);
+    VIASETREG(VIA_REG_TRANSPACE, 0x63000000);
+    VIASETREG(VIA_REG_TRANSPACE, 0x64000000);
 
-    VIASETREG(0x43C, 0x00fe0000);
+    VIASETREG(VIA_REG_TRANSET, 0x00fe0000);
 
     if (pVia->ChipRev >= 3 )
-      VIASETREG(0x440,0x40008c0f);
+      VIASETREG(VIA_REG_TRANSPACE,0x40008c0f);
     else
-      VIASETREG(0x440,0x4000800f);
+      VIASETREG(VIA_REG_TRANSPACE,0x4000800f);
 
-    VIASETREG(0x440,0x44000000);
-    VIASETREG(0x440,0x45080C04);
-    VIASETREG(0x440,0x46800408);
-    VIASETREG(0x440,0x50000000);
-    VIASETREG(0x440,0x51000000);
-    VIASETREG(0x440,0x52000000);
-    VIASETREG(0x440,0x53000000);
+    VIASETREG(VIA_REG_TRANSPACE,0x44000000);
+    VIASETREG(VIA_REG_TRANSPACE,0x45080C04);
+    VIASETREG(VIA_REG_TRANSPACE,0x46800408);
+    VIASETREG(VIA_REG_TRANSPACE,0x50000000);
+    VIASETREG(VIA_REG_TRANSPACE,0x51000000);
+    VIASETREG(VIA_REG_TRANSPACE,0x52000000);
+    VIASETREG(VIA_REG_TRANSPACE,0x53000000);
 
     
-    VIASETREG(0x43C,0x00fe0000);
-    VIASETREG(0x440,0x08000001);
-    VIASETREG(0x440,0x0A000183);
-    VIASETREG(0x440,0x0B00019F);
-    VIASETREG(0x440,0x0C00018B);
-    VIASETREG(0x440,0x0D00019B);
-    VIASETREG(0x440,0x0E000000);
-    VIASETREG(0x440,0x0F000000);
-    VIASETREG(0x440,0x10000000);
-    VIASETREG(0x440,0x11000000);
-    VIASETREG(0x440,0x20000000);
+    VIASETREG(VIA_REG_TRANSET,0x00fe0000);
+    VIASETREG(VIA_REG_TRANSPACE,0x08000001);
+    VIASETREG(VIA_REG_TRANSPACE,0x0A000183);
+    VIASETREG(VIA_REG_TRANSPACE,0x0B00019F);
+    VIASETREG(VIA_REG_TRANSPACE,0x0C00018B);
+    VIASETREG(VIA_REG_TRANSPACE,0x0D00019B);
+    VIASETREG(VIA_REG_TRANSPACE,0x0E000000);
+    VIASETREG(VIA_REG_TRANSPACE,0x0F000000);
+    VIASETREG(VIA_REG_TRANSPACE,0x10000000);
+    VIASETREG(VIA_REG_TRANSPACE,0x11000000);
+    VIASETREG(VIA_REG_TRANSPACE,0x20000000);
 }
 #endif
